--- a/1.0.1_1/manifest.json
+++ b/1.0.1_1/manifest.json
@@ -16,6 +16,8 @@
     "web_accessible_resources": [
    "media/img/star_full.png",
    "media/img/star_empty.png",
+    "media/img/1.jpg",
+   "media/img/2.jpg",
 "media/img/star_highlight.png"
 
     ],
